[package]
name = "rust_load_balancer"
version = "0.1.0"
edition = "2021"
authors = ["Richard Xue : xrichard@seas.upenn.edu, Vedansh Goenka : vedanshg@seas.upenn.edu"]
description = "A high-performance load balancer written in Rust, for CIS1905 24 Fall Semester"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
clap = { version = "4.2", features = ["derive"] } 