[package]
name = "rust_load_balancer"
version = "0.1.0"
edition = "2021"
authors = ["Richard Xue <xrichard@seas.upenn.edu>", "Vedansh Goenka <vedanshg@seas.upenn.edu>"]
description = "A simple load balancer written in Rust"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.2", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
